Banner responveness; not wraping flex box fix

--- a/src/components/banner.module.css
+++ b/src/components/banner.module.css
@@ -5,19 +5,24 @@
 }
 .wrapper {
   display: flex;
-  width: max-content;
-  max-width: 100%;
   margin: 0 auto;
+  max-width: max-content;
 }
   .photo {
-    width: 300px;
+    min-width: 300px;
+    max-width: 300px;
+    min-height: 356px;
+    max-height: 356px;
   }
   .description {
     letter-spacing: 1px;
   }
     .title {
-      margin-left: 0;
+      margin: 0 0 30px 0;
       padding: 10px;
+    }
+    .content {
+      padding-right: 30px;
     }
 
 
